feat(payment-service): implement PaymentService and PaymentRepository
- Add PaymentService interface and PaymentServiceImpl with business logic
- Add validation for IDs and date ranges in service layer
- Integrate PaymentMapper for Entity-to-DTO conversion
- Configure @Transactional strategies for read and write operations